fix align to center, fix the problem that paragraph stretches together when screen width increases

--- a/src/css/sections/_category-masonry.css
+++ b/src/css/sections/_category-masonry.css
@@ -22,18 +22,23 @@
 .masonry .right-content {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  /* column-gap: 10px; */
+  justify-content: space-around;
   padding: 10px;
+  align-items: center;
 }
 .masonry h2 {
   margin-top: 0;
   text-decoration: none;
+
 }
 .masonry p {
   height: 5rem;
   line-height: 1rem;
   overflow: hidden;
   justify-content: justify;
+  max-width: 400px;
+
 }
 /* Should think about @mixin */
 .masonry:nth-child(even) .cta  {
